# experimento-discord-bot

./: .env_example  .gitignore  .replit  Dockerfile  README.md  image_cog.py  keep_alive.py  main.py  music.py  music_cog.py  new_req.txt  pyproject.toml  pyproject.toml.backup  replit.nix  req.txt  requirements.txt  start.sh  teste.py  tmp
UnlimitedGPT/: UnlimitedGPT.py  __init__.py
UnlimitedGPT/internal/: chatgpt_data.py  driver.py  exceptions.py  objects.py
cogs/: chatgpt_cog.py  falatron_cog.py  fordevs_cog.py  image_cog.py  music.py  music_cog.py  openapi_cog.py  telegram_cog.py
cogs/utils/: utils.py
falatron/: falatron.py  voice_list.py
google_images_download/: __init__.py  __main__.py  google_images_download.py
integracoes/: telegrambot.py
